--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1118,6 +1118,10 @@ video {
   z-index: 1000;
 }
 
+.z-\[1001\] {
+  z-index: 1001;
+}
+
 .z-\[100\] {
   z-index: 100;
 }
@@ -1691,14 +1695,6 @@ video {
 
 .rounded-md {
   border-radius: 0.375rem;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
-.rounded-xl {
-  border-radius: 0.75rem;
 }
 
 .rounded-e-full {
@@ -2360,6 +2356,33 @@ video {
   left: 0;
   bottom: 0;
   background-image: linear-gradient(to top, #ffffff 20%, transparent);
+}
+
+.loadingScreen {
+  width: 60px;
+  aspect-ratio: 2;
+  --_g: no-repeat radial-gradient(circle closest-side, #DDA15E 90%, #ffffff00);
+  background: var(--_g) 0% 50%, var(--_g) 50% 50%, var(--_g) 100% 50%;
+  background-size: calc(100% / 3) 50%;
+  animation: l3 1s infinite linear;
+}
+
+@keyframes l3 {
+  20% {
+    background-position: 0% 0%, 50% 50%, 100% 50%;
+  }
+
+  40% {
+    background-position: 0% 100%, 50% 0%, 100% 50%;
+  }
+
+  60% {
+    background-position: 0% 50%, 50% 100%, 100% 0%;
+  }
+
+  80% {
+    background-position: 0% 50%, 50% 50%, 100% 100%;
+  }
 }
 
 .hover\:translate-y-1:hover {
